# demografia

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: apply-completion-v2.yml  apply-completion.yml  tests.yml
demografia/: __init__.py  age_structure.py  charts.py  config.py  final_tables.py  http.py  indicators.py  inps.py  integration.py  internal_migration.py  istat_official.py  istat_registry.py  jsonstat.py  notebook_charts.py  official_pipeline.py  official_quality.py  pipeline.py  quality.py  rgs.py  territory.py  transform.py  utils.py  wpp_auto.py
demografia/sources/: __init__.py  eurostat.py  inps.py  (+4 more)
docs/: data_dictionary.md  final_tables.md  methodology.md  official_sources.md  roadmap.md
metadata/: dataset_catalog.csv  indicator_catalog.csv  inps_role_rules.csv  rgs_projection_queries.csv  source_catalog.csv
notebooks/: 01_kebab_e_proiezioni.ipynb  01_piramide_e_proiezioni.ipynb  02_confronti_ue_oecd.ipynb  02_movimento_naturale.ipynb  03_migrazioni.ipynb  04_istruzione.ipynb  05_territori_italiani.ipynb  06_confronti_europei.ipynb
scripts/: check_official_sources.py  check_sources.py  discover_istat_dataflows.py  discover_istat_registry.py  download_wpp.py  run_official_pipeline.py  run_pipeline.py
tests/: test_final_tables.py  test_indicators.py  test_inps_sources.py  test_integration.py  test_istat_official.py  test_istat_registry.py  test_jsonstat.py  test_notebook_charts.py  test_official_quality.py  test_quality_extended.py  test_rgs.py  test_territory.py  test_wpp_auto.py
tools/: demografia_bundle.part.00
